# OSCVideoPlayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_cn.md  build_darwin.sh  build_linux.sh  build_windows.bat  frame_timing.lua  oscplayer-darwin-universal
android/: README.md  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/oscvideoplayer/: AboutActivity.kt  BootReceiver.kt  BootWorker.kt  FileManager.kt  MainActivity.kt  OSCServer.kt  OSCService.kt  ScreenReceiver.kt  SearchActivity.kt  VideoScanner.kt
android/app/src/main/res/color/: video_item_bg.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  video_item_selector.xml
android/app/src/main/res/layout/: activity_main.xml  activity_search.xml  item_video.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
include/: AudioDevice.h  DisplayInfo.h  OSCMessage.h  OSCServer.h  Platform.h  Player.h  Zeroconf.h
src/: AudioDevice.cpp  DisplayInfo.cpp  OSCMessage.cpp  OSCServer.cpp  Platform.cpp  Player.cpp  Zeroconf.cpp  main.cpp
